--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Codeshelf</title>
 		<meta charset="utf-8">
-        <link rel="stylesheet" href="./css/bootstrap-combined.min.css">
+        <link rel="stylesheet" href="./lib/TwitterBootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./lib/TwitterBootstrap/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="./css/roundedpanel.css">
 		<link rel="stylesheet" href="./css/menu.css">
 		<link rel="stylesheet" href="./css/menuitem.css">
@@ -22,23 +23,25 @@
 		<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
 		<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
-		<script src="./lib/AngularJS/angular.js" ></script>
+		<script src="./lib/AngularJS/angular.min.js" ></script>
 		<script src="./lib/AngularJS/i18n/angular-locale_en-us.js"></script>
 		<script src="./lib/AngularJS/angular-route.js"></script>
 		<script src="./lib/UIBootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
 
+
 		<link rel="icon" href="./favicon.gif" />
 	</head>
 	<body id="body" class="login_body" ng-controller="WorkAreaCtrl">
-	
+
 		<!-- Start the codeshelf application -->
 		<script type="text/javascript" src="./js/codeshelf.js"></script>
+        <script src="./lib/TwitterBootstrap/js/bootstrap.js"></script>
 
 		<!--script type="text/javascript">
 			goog.require('codeshelf.application');
 			goog.require('codeshelf.controllers');
 		</script-->
-		
+
 		<!--script type="text/javascript" src="../js_uncompiled/codeshelf.controllers.js"></script-->
 		<div ng-view></div>
 		<script>
