Make compiled and uncompiled more similar

--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -29,9 +29,6 @@
         <script src="../../lib/AngularJS/angular-route.js"></script>
         <script src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
 
-        <!-- add these two allows navbar dropdowns to work-->
-        <script src="../../lib/JQuery/jquery-1.7.1.js"></script>
-        <script src="../../lib/TwitterBootstrap/js/bootstrap.js"></script>
 
        <script type="text/javascript" src="../js_uncompiled/deps.js"></script>
 
@@ -43,6 +40,11 @@
            goog.require('codeshelf.application');
            goog.require('codeshelf.controllers');
        </script>
+
+       <!-- add to allow navbar dropdowns to work
+            Interesting. If in <head> section need the JQuery line in uncompiled-->
+       <!-- <script src="../../lib/JQuery/jquery-1.7.1.js"></script>  -->
+       <script src="../../lib/TwitterBootstrap/js/bootstrap.js"></script>
 
        <!--script type="text/javascript" src="../js_uncompiled/codeshelf.controllers.js"></script-->
 		<div ng-view></div>
