--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -3,8 +3,6 @@
 <head>
 	<title>Codeshelf</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="../../lib/TwitterBootstrap/css/bootstrap.min.css">
-	<link rel="stylesheet" href="../../lib/TwitterBootstrap/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="../css/roundedpanel.css">
 	<link rel="stylesheet" href="../css/menu.css">
 	<link rel="stylesheet" href="../css/menuitem.css">
@@ -20,6 +18,8 @@
 	<link rel="stylesheet" href="../css/codeshelf.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="../css/listview.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="../css/slick-default-theme.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/bootstrap-theme.min.css">
 	<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
@@ -28,27 +28,6 @@
 	<script type="text/javascript" src="../../lib/AngularJS/i18n/angular-locale_en-us.js"></script>
 	<script type="text/javascript" src="../../lib/AngularJS/angular-route.js"></script>
 	<script type="text/javascript" src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
-	<script type="text/javascript" src="../../lib/JQuery/jquery-1.7.1.js"></script>
-	<script type="text/javascript" src="../../lib/TwitterBootstrap/js/bootstrap.js"></script>
-
-	<!-- This script checks for, then loads a script to set the websocket address to something other than default. -->
-	<!-- There's an example file in the js_uncompiled directory. -->
-	<!--script src="./setSocketAddr.js"/-->
-	<script>
-//		function get_error(x) {
-//			<!-- do nothing -->
-//		}
-//		url = "./setSocketAddr.js";
-//		url += "?" + new Date().getTime() + Math.floor(Math.random() * 1000000);
-//		var script = document.createElement('script');
-//		script.id = "websocket.addr.script";
-//		script.onerror = function () {
-//			if (script.onerror)
-//					get_error(this.id)
-//		}
-//		script.src = url;
-//		document.head.appendChild(script);
-	</script>
 
 	<script type="text/javascript" src="../js_uncompiled/deps.js"></script>
 
