--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" href="./css/slick-default-theme.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="./lib/angular-dialog-service/dialogs.css">
 
 	<!--script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -27,7 +28,13 @@
 	<script type="text/javascript" src="./lib/AngularJS/angular.js"></script>
 	<script type="text/javascript" src="./lib/AngularJS/i18n/angular-locale_en-us.js"></script>
 	<script type="text/javascript" src="./lib/AngularJS/angular-route.js"></script>
+
 	<script type="text/javascript" src="./lib/UIBootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+	<script type="text/javascript" src="./lib/AngularJS/angular-sanitize.js"></script>
+	<script type="text/javascript" src="./lib/angular-translate/angular-translate.js"></script>
+
+
+	<script type="text/javascript" src="./lib/angular-dialog-service/dialogs.js"></script>
 
 	<link rel="icon" href="./favicon.gif"/>
 </head>
