Move angular app intitialization to a js file so that it can be included in html pages and karma tests

--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -35,13 +35,7 @@
 
 
 	<script type="text/javascript" src="./lib/angular-dialog-service/dialogs.min.js"></script>
-	<script>
-		//Simplest way to ensure that the angular module is defined early as possible
-		var codeshelfApp = angular.module('codeshelfApp', [
-		  'ui.bootstrap',
-  		  'ngRoute'
-		]);
-	</script>
+	<script type="text/javascript" src="./js/codeshelfAngularApp.js"></script>
 	<link rel="icon" href="./favicon.gif"/>
 </head>
 <body id="body" class="login_body">
