Move JQuery folder to a jquery-ext to avoid collision on case insensitive systems

--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -26,7 +26,7 @@
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
 	<script type="text/javascript" src="./lib/jquery/jquery.js"></script>
-	<script type="text/javascript" src="./lib/JQuery/jquery-ui.1.8.19.js"></script>
+	<script type="text/javascript" src="./lib/jquery-ext/jquery-ui.1.8.19.js"></script>
 	<script type="text/javascript" src="./lib/AngularJS/angular.min.js"></script>
 	<script type="text/javascript" src="./lib/AngularJS/i18n/angular-locale_en-us.js"></script>
 	<script type="text/javascript" src="./lib/AngularJS/angular-route.min.js"></script>
