Changes to edit the grid for item list view

--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -4,7 +4,7 @@
 	<title>Codeshelf</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" href="../css/jquery-ui-1.8.16.custom.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="../../lib/jquery-ui/themes/smoothness/jquery.ui.all.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="../css/slick.grid.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="../css/slick.pager.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="../css/slick.columnpicker.css" type="text/css" media="screen"/>
