Changes to correct the CSS/Images so that sort arrows appear in the grid

--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -5,10 +5,11 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../../lib/jquery-ui/themes/smoothness/jquery.ui.all.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="../css/slick.grid.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="../css/slick.pager.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="../css/slick.columnpicker.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="../css/slick-default-theme.css" type="text/css" media="screen"/>
+
+	<link rel="stylesheet" href="../../lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="../../lib/SlickGrid/controls/slick.columnpicker.css" type="text/css" media="screen"/>
+
 	<link rel="stylesheet" href="../../lib/angular-dialog-service/dialogs.css">
 
 	<link rel="stylesheet" href="../css/roundedpanel.css">
