--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="./lib/jquery-ui/themes/smoothness/jquery.ui.all.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="./css/slick.grid.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="./css/slick.pager.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="./css/slick.columnpicker.css" type="text/css" media="screen"/>
-	<link rel="stylesheet" href="./css/slick-default-theme.css" type="text/css" media="screen"/>
+
+	<link rel="stylesheet" href="./lib/SlickGrid/slick.grid.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="./lib/SlickGrid/controls/slick.pager.css" type="text/css" media="screen"/>
+	<link rel="stylesheet" href="./lib/SlickGrid/controls/slick.columnpicker.css" type="text/css" media="screen"/>
 	<link rel="stylesheet" href="./lib/angular-dialog-service/dialogs.min.css">
 
 	<link rel="stylesheet" href="./css/roundedpanel.css">
