initial commit for formatting times client side This will show previous che runs as either current or a formatted time

--- a/src/html/codeshelf.dev.html
+++ b/src/html/codeshelf.dev.html
@@ -38,7 +38,9 @@
 	<script type="text/javascript" src="../../lib/UIBootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
 	<script type="text/javascript" src="../../lib/angular-translate/angular-translate.js"></script>
 	<script type="text/javascript" src="../../lib/angular-dialog-service/dialogs.js"></script>
+	<script type="text/javascript" src="../../lib/moment/min/moment.min.js"></script>
 	<script type="text/javascript" src="../../lib/SlickGrid/slickgrid.concat.js"></script>
+
 	<script type="text/javascript" src="../js_uncompiled/deps.js"></script>
 	<script type="text/javascript" src="../js_uncompiled/codeshelfAngularApp.js"></script>
 	<link rel="icon" href="./favicon.gif"/>
