Added extern and moment library to the codeshelf.html to support compiled mode

--- a/src/html/codeshelf.html
+++ b/src/html/codeshelf.html
@@ -39,6 +39,7 @@
 
 	<script type="text/javascript" src="./lib/angular-dialog-service/dialogs.min.js"></script>
 	<script type="text/javascript" src="./lib/SlickGrid/slickgrid.concat.js"></script>
+	<script type="text/javascript" src="./lib/moment/min/moment.min.js"></script>
 	<script type="text/javascript" src="./js/codeshelfAngularApp.js"></script>
 	<link rel="icon" href="./favicon.gif"/>
 </head>
