--- a/productivity/index.html
+++ b/productivity/index.html
@@ -305,7 +305,7 @@
             <div class="row">
 				<div class="col-lg-12">
                 <div class="wrapper wrapper-content">
-                    <div class="row">
+                    <div class="row orderdetails">
 						<div id="orderdetail" class="col-lg-4">
                         </div>
                         <div class="col-lg-4">
