--- a/productivity/index.html
+++ b/productivity/index.html
@@ -25,21 +25,7 @@
 <body>
     <div id="wrapper">
         <nav class="navbar-default navbar-static-side" role="navigation">
-            <div class="sidebar-collapse">
-                <ul class="nav" id="side-menu">
-                    <li class="nav-header">
-                    </li>
-                    <li class="active">
-                        <a href="#"><i class="fa fa-bar-chart-o"></i> <span class="nav-label">Activity</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level">
-                            <li><a href="graph_flot.html">All</a></li>
-                            <li><a href="graph_morris.html">Chill</a></li>
-                            <li><a href="graph_rickshaw.html">Dry</a></li>
-                            <li><a href="graph_chartjs.html">Produce</a></li>
-                        </ul>
-                    </li>
-                </ul>
-
+            <div id="nav-container" class="sidebar-collapse">
             </div>
         </nav>
         <div id="page-wrapper" class="gray-bg dashbard-1">
@@ -54,63 +40,6 @@
             </form>
         </div>
         <ul class="nav navbar-top-links navbar-right">
-        <!--         <li>
-                    <span class="m-r-sm text-muted welcome-message">Welcome to INSPINIA+ Admin Theme.</span>
-                </li>
-		-->
-        <!--         <li class="dropdown">
-                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                        <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-messages">
-                        <li>
-                            <div class="dropdown-messages-box">
-                                <a href="profile.html" class="pull-left">
-                                    <img alt="image" class="img-circle" src="img/a7.jpg">
-                                </a>
-                                <div class="media-body">
-                                    <small class="pull-right">46h ago</small>
-                                    <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
-                                    <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <div class="dropdown-messages-box">
-                                <a href="profile.html" class="pull-left">
-                                    <img alt="image" class="img-circle" src="img/a4.jpg">
-                                </a>
-                                <div class="media-body ">
-                                    <small class="pull-right text-navy">5h ago</small>
-                                    <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>. <br>
-                                    <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <div class="dropdown-messages-box">
-                                <a href="profile.html" class="pull-left">
-                                    <img alt="image" class="img-circle" src="img/profile.jpg">
-                                </a>
-                                <div class="media-body ">
-                                    <small class="pull-right">23h ago</small>
-                                    <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
-                                    <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <div class="text-center link-block">
-                                <a href="mailbox.html">
-                                    <i class="fa fa-envelope"></i> <strong>Read All Messages</strong>
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </li> -->
                 <li class="dropdown">
                     <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
                         <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
@@ -164,21 +93,10 @@
 			<div class="row wrapper border-bottom white-bg page-heading">
                 <div class="col-lg-9">
                     <h2>Chill</h2>
-                    <ol class="breadcrumb">
-						<li>
-                            <a href="index.html">--Org--Here</a>
-                        </li>
-						<li>
-                            <a href="index.html">--Facility--Here</a>
-                        </li>
-                         <li>
-                            <a href="index.html">Activity</a>
-                        </li>
-                        <li class="active">
-                            <strong>Chill</strong>
-                        </li>
-                    </ol>
-                </div>
+					<div id="pageBreadcrumb">
+						<!-- bread crumb component -->
+					</div>
+				</div>
             </div>
             <div class="row">
 				<div class="col-lg-12">
