--- a/productivity/admin.html
+++ b/productivity/admin.html
@@ -19,9 +19,9 @@
 
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/csadmin.css" rel="stylesheet">
 
 </head>
-
 <body>
     <div id="wrapper">
         <nav class="navbar-default navbar-static-side" role="navigation">
@@ -132,7 +132,7 @@
     <script src="js/plugins/gritter/jquery.gritter.min.js"></script>
 
 	<script src="http://localhost:8080/webpack-dev-server.js"></script>
-	<script src="app.bundle.js"></script>
+	<script src="admin.bundle.js"></script>
     <script>
         $(document).ready(function() {
             WinMove();
