--- a/productivity/index.html
+++ b/productivity/index.html
@@ -19,6 +19,7 @@
 
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/app.css" rel="stylesheet">
 
 </head>
 
