--- a/productivity/index.html
+++ b/productivity/index.html
@@ -24,97 +24,9 @@
 </head>
 
 <body>
-    <div id="wrapper">
-        <nav class="navbar-default navbar-static-side" role="navigation">
-            <div id="nav-container" class="sidebar-collapse">
-            </div>
-        </nav>
-        <div id="page-wrapper" class="gray-bg dashbard-1">
-			<div class="row border-bottom">
-				<nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
-					<div class="navbar-header">
-            <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
-            <form role="search" class="navbar-form-custom" method="post" action="search_results.html">
-                <div class="form-group">
-                    <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search">
-                </div>
-            </form>
-        </div>
-        <ul class="nav navbar-top-links navbar-right">
-                <li class="dropdown">
-                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                        <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-alerts">
-                        <li>
-                            <a href="mailbox.html">
-                                <div>
-                                    <i class="fa fa-envelope fa-fw"></i> You have 16 messages
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="profile.html">
-                                <div>
-                                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                    <span class="pull-right text-muted small">12 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="grid_options.html">
-                                <div>
-                                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                    <span class="pull-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <div class="text-center link-block">
-                                <a href="notifications.html">
-                                    <strong>See All Alerts</strong>
-                                    <i class="fa fa-angle-right"></i>
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="login.html">
-                        <i class="fa fa-sign-out"></i> Log out
-                    </a>
-                </li>
-            </ul>
-				</nav>
-			</div>
-			<div class="row wrapper border-bottom white-bg page-heading">
-                <div class="col-lg-9">
-					<div id="pageBreadcrumb">
-						<!-- bread crumb component -->
-					</div>
-				</div>
-            </div>
-            <div class="row">
-				<div class="col-lg-12">
-                <div class="wrapper wrapper-content">
-					<!-- - order details row here -->
-                </div>
-                <div class="footer">
-                    <div class="pull-right">
-                        <!-- -10GB of <strong>250GB</strong> Free. -->
-                    </div>
-                    <div>
-                        <strong>Copyright</strong> Codeshelf &copy; 2014-2015
-                    </div>
-                </div>
-            </div>
-			</div>
-        </div>
-    </div>
+  <div id="page">
+    Data could not be retrieved
+  </div>
 
     <!-- Mainly scripts -->
     <script src="js/jquery-1.10.2.js"></script>
@@ -132,8 +44,8 @@
     <!-- GITTER -->
     <script src="js/plugins/gritter/jquery.gritter.min.js"></script>
 
-	<script src="http://localhost:8080/webpack-dev-server.js"></script>
-	<script src="app.bundle.js"></script>
+        <script src="http://localhost:8080/webpack-dev-server.js"></script>
+        <script src="app.bundle.js"></script>
     <script>
         $(document).ready(function() {
             WinMove();
