Change message during load

--- a/productivity/index.html
+++ b/productivity/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <div id="page">
-      Data could not be retrieved
+      Retrieving Data
     </div>
 
     <!-- Mainly scripts -->
