--- a/productivity/index.html
+++ b/productivity/index.html
@@ -37,6 +37,6 @@
 
 
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
-    <script src="app.bundle.js"></script>
+    <script src="router.bundle.js"></script>
   </body>
 </html>
