--- a/productivity/components-display.html
+++ b/productivity/components-display.html
@@ -10,7 +10,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-<link href="node_modules/tablesaw/dist/stackonly/tablesaw.stackonly.css" rel="stylesheet"/>
+<link href="node_modules/tablesaw/dist/tablesaw.css" rel="stylesheet"/>
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
@@ -35,7 +35,7 @@
     <!-- jQuery UI -->
     <script src="js/plugins/jquery-ui/jquery-ui.min.js"></script>
 
- <script src="node_modules/tablesaw/dist/stackonly/tablesaw.stackonly.js"></script>
+ <script src="node_modules/tablesaw/dist/tablesaw.js"></script>
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
     <script src="components.bundle.js"></script>
   </body>
