Pick Event  chart with quick form

--- a/productivity/components-display.html
+++ b/productivity/components-display.html
@@ -10,11 +10,19 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-<link href="node_modules/tablesaw/dist/tablesaw.css" rel="stylesheet"/>
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
+    <style>
+      body {
+          background-color: white;
+      }
 
+      .nvd3 svg {
+          height: 400px;
+          width: 100%;
+      }
+    </style>
   </head>
 
   <body>
@@ -35,7 +43,6 @@
     <!-- jQuery UI -->
     <script src="js/plugins/jquery-ui/jquery-ui.min.js"></script>
 
- <script src="node_modules/tablesaw/dist/tablesaw.js"></script>
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
     <script src="components.bundle.js"></script>
   </body>
