--- a/productivity/login.html
+++ b/productivity/login.html
@@ -10,7 +10,6 @@
 
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
 </head>
 
 <body class="gray-bg">
@@ -26,15 +25,15 @@
             <div id="form-messages" class="alert alert-danger" style="display:none">
               We didn't recognize your <br />username and password. Try again.
             </div>
-            <form class="m-t" role="form" method="POST" action="/auth/">
+            <form id="login-form" class="m-t" role="form" method="POST" action="/auth/">
                 <div class="form-group">
                     <input type="email" class="form-control" placeholder="Username" required="" name="u">
                 </div>
                 <div class="form-group">
                     <input type="password" class="form-control" placeholder="Password" required="" name="p">
                 </div>
-                <input type="hidden" name="retry" value="/productivity/login.html?status=failed" />
-                <input type="hidden" name="next" value="/productivity" />
+                <input id="retry" type="hidden" name="retry" value="/productivity/login.html?status=failed" />
+                <input id="next" type="hidden" name="next" value="/productivity" />
                 <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
 <!--                <a href="#"><small>Forgot password?</small></a> -->
@@ -47,8 +46,14 @@
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script>
-      if (window.location.href.indexOf("status=failed") > 0) {
+      var statusFailed = "status=failed";
+      if (window.location.href.indexOf(statusFailed) > 0) {
           $("#form-messages").show();
       }
+      var baseURL = location.protocol+'//'+location.hostname+(location.port ? ':'+location.port: '');
+      var nextURL = baseURL + "/productivity";
+      var retryURL = baseURL + "/productivity/login.html?" + statusFailed;
+      $("#next").val(nextURL);
+      $("#retry").val(retryURL);
     </script>
 </body></html>
