DEV-1354 reference ux favicon for now

--- a/src/companion/index.html
+++ b/src/companion/index.html
@@ -8,7 +8,7 @@
 
     </script>
     <link href="/build/app.css?v=2.0.0" rel="stylesheet" />
-    <link href="/build/img/favicon.icon?v=2.0.0" rel="shortcut icon" />
+    <link href="/ux/favicon.gif?v=2.0.0" rel="shortcut icon" />
   </head>
   <body>
     <div id="app">Loading...</div>
